Add article, article comments

--- a/src/entities/Article/ui/Article/Article.module.scss
+++ b/src/entities/Article/ui/Article/Article.module.scss
@@ -13,3 +13,22 @@
 .skeleton {
     margin-top: 15px;
 }
+
+.articleInfo {
+    display: flex;
+    align-items: center;
+}
+
+.icon {
+    margin-right: 8px;
+}
+
+.avatarWrapper {
+    display: flex;
+    width: 100%;
+    justify-self: center;
+}
+
+.block {
+    margin-top: 16px;
+}
