--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -2,6 +2,11 @@
     cursor: pointer;
     color: var(--primary-color);
     padding: 10px 15px;
+
+    &:hover {
+        opacity: 0.8;
+        fill-opacity: 80%;
+    }
 }
 
 .clear {
