--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -1,9 +1,9 @@
 .title {
-    font: var(--font-l);
+    color: var(--primary-color);
 }
 
 .text {
-    font: var(--font-m);
+    color: var(--inverted-primary-color);
 }
 
 .error {
@@ -36,4 +36,24 @@
 
 .center {
     text-align: center;
+}
+
+.size_m {
+    .title {
+        font: var(--font-l);
+    }
+
+    .text {
+        font: var(--font-m);
+    }
+}
+
+.size_l {
+    .title {
+        font: var(--font-xl);
+    }
+
+    .text {
+        font: var(--font-l);
+    }
 }
